--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^6.0.5"
+    "styled-components": "^6.0.5",
+    "sweetalert2": "^11.7.20"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
