--- a/package.json
+++ b/package.json
@@ -16,22 +16,6 @@
     "@auth0/auth0-react": "^2.2.0",
     "@chakra-ui/icons": "^2.1.0",
     "@chakra-ui/react": "^2.8.0",
-    "@reduxjs/toolkit": "^1.9.5",
-    "axios": "^1.4.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.45.2",
-    "react-icons": "^4.10.1",
-    "react-redux": "^8.1.1",
-    "react-router-dom": "^6.14.2",
-    "react-slick": "^0.29.0",
-    "redux": "^4.2.1",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.2",
-    "slick-carousel": "^1.8.1",
-    "styled-components": "^6.0.5",
-    "sweetalert2": "^11.7.20",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fullcalendar/core": "^6.1.8",
@@ -48,16 +32,33 @@
     "@nivo/geo": "^0.83.0",
     "@nivo/line": "^0.83.0",
     "@nivo/pie": "^0.83.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
     "formik": "^2.4.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.2",
+    "react-icons": "^4.10.1",
     "react-pro-sidebar": "^0.7.1",
+    "react-redux": "^8.1.1",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.0.5",
+    "sweetalert2": "^11.7.20",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.0.4",
     "eslint": "^8.44.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
