--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "redux-thunk": "^2.4.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.5",
-    "sweetalert2": "^11.7.20"
+    "sweetalert2": "^11.7.20",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
