--- a/package.json
+++ b/package.json
@@ -53,8 +53,7 @@
     "redux-thunk": "^2.4.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.5",
-    "sweetalert2": "^11.6.13",
-    "yup": "^1.2.0"
+    "sweetalert2": "^11.6.13"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
